# dersubj

./: Makefile.in  README  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  makefile
src/: DerHandler.cpp  DerHandler.h  FileReader.cpp  FileReader.h  Makefile.am  Makefile.in  main.cpp
src/.deps/: DerHandler.Po  FileReader.Po  main.Po
